# quantrade

./: README.md  backtest_result.csv  main.py  pyproject.toml
backtest/: vectorized.py
cached_data/: etf_20230101_20231231.csv
config/: settings.py
data/: fetcher.py
strategies/: base.py  trend_follow.py
